@@ -149,7 +149,7 @@ int mqtt3_handle_connect(mosquitto_db *db, mqtt3_context *context)
 					password_flag = 0;
 				}
 			}
-			rc = mqtt3_unpwd_check(db, username, password);
+			rc = mosquitto_unpwd_check(db, username, password);
 			if(rc == MOSQ_ERR_AUTH){
 				mqtt3_raw_connack(context, 2);
 				mqtt3_socket_close(context);
