@@ -37,6 +37,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <memory_mosq.h>
 #include <mqtt3.h>
 
+#ifndef WITH_EXTERNAL_SECURITY_CHECKS
+
 int _add_acl(struct _mosquitto_db *db, const char *user, const char *topic, int access)
 {
 	struct _mosquitto_acl_user *acl_user=NULL, *user_tail;
@@ -160,7 +162,7 @@ int _add_acl(struct _mosquitto_db *db, const char *user, const char *topic, int 
 	return MOSQ_ERR_SUCCESS;
 }
 
-int mqtt3_acl_check(struct _mosquitto_db *db, mqtt3_context *context, const char *topic, int access)
+int mosquitto_acl_check(struct _mosquitto_db *db, mqtt3_context *context, const char *topic, int access)
 {
 	char *local_topic;
 	char *token;
@@ -360,7 +362,7 @@ int mqtt3_pwfile_parse(struct _mosquitto_db *db)
 	return MOSQ_ERR_SUCCESS;
 }
 
-int mqtt3_unpwd_check(struct _mosquitto_db *db, const char *username, const char *password)
+int mosquitto_unpwd_check(struct _mosquitto_db *db, const char *username, const char *password)
 {
 	struct _mosquitto_unpwd *tail;
 
@@ -387,7 +389,7 @@ int mqtt3_unpwd_check(struct _mosquitto_db *db, const char *username, const char
 	return MOSQ_ERR_AUTH;
 }
 
-int mqtt3_unpwd_cleanup(struct _mosquitto_db *db)
+int mosquitto_unpwd_cleanup(struct _mosquitto_db *db)
 {
 	struct _mosquitto_unpwd *tail;
 
@@ -404,3 +406,4 @@ int mqtt3_unpwd_cleanup(struct _mosquitto_db *db)
 	return MOSQ_ERR_SUCCESS;
 }
 
+#endif
